# paperclip-company-factory

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml
deploy/: docker-compose.yml
deploy/caddy/: Caddyfile.example
docs/: agent-install.ko.md  agent-install.md  architecture.ko.md  architecture.md  launch-playbook.md  onboarding.ko.md  onboarding.md  quickstart.ko.md  quickstart.md  security.md  troubleshooting.md
examples/: example_create_research_company.md
scripts/: bootstrap_paperclip.sh  enable_autostart.sh  first_run_wizard.py  install_from_github_url.sh  logs.sh  one_click_install.sh  restart.sh  status.sh  validate_env.py
skills/paperclip-company-factory/: SKILL.md
skills/paperclip-company-factory/references/: launch-checklist.md
src/paperclip_company_factory/: bridge.py  cli.py  config.py  formatter.py  paperclip_api.py  planner.py  provider_profiles.py  templates.py
templates/: ai-agency.yaml  content-studio.yaml  personal-ops-company.yaml  research-company.yaml  saas-company.yaml
tests/: test_bootstrap.py  test_bridge.py  test_cli.py  test_formatter.py  test_planner.py
